force-app/main/default/objects/Actual_Price__c/Actual_Price__c.object-meta.xml
<CustomObject>
    <description>Indicates the List price for a procedure w.r.t the Provider.</description>
    <label>Actual Price</label>
    <nameField>
        <displayFormat>AP-{0000}</displayFormat>
        <label>Actual Price Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actual Price</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>