force-app/main/default/objects/Actual_Price__c/fields/Actual_Discount_Applied__c.field-meta.xml
<CustomField>
    <fullName>Actual_Discount_Applied__c</fullName>
    <description>This is a formula field that calculate the Actual discount Amount after Discount is applied.</description>
    <formula>IF(
ISPICKVAL( Discount_Type__c , &apos;$&apos;) ,
Discount_Amount__c ,
IF(
ISPICKVAL( Discount_Type__c , &apos;%&apos;),
List_Price__c * Discount_Percentage__c ,
0
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Discount Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>