force-app/main/default/objects/Actual_Price__c/fields/Actual_Price_After_Discount__c.field-meta.xml
<CustomField>
    <fullName>Actual_Price_After_Discount__c</fullName>
    <description>This field is used to store final list price after applying the discount.</description>
    <formula>IF(
 ISPICKVAL( Discount_Type__c , &apos;$&apos;) ,
  List_Price__c -  Discount_Amount__c , 
 IF(
ISPICKVAL( Discount_Type__c , &apos;%&apos;), 
List_Price__c -  List_Price__c * Discount_Percentage__c , 
0
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Price After Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>