force-app/main/default/objects/Actual_Price__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>To add description related to price book</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>