force-app/main/default/objects/Actual_Price__c/fields/Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The Amount by which the list price is reduced to calculate the Actual Price After Discount.</description>
    <label>Discount Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>