force-app/main/default/objects/Actual_Price__c/fields/List_Price__c.field-meta.xml
<CustomField>
    <fullName>List_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The original price for a product.</description>
    <label>List Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>