force-app/main/default/objects/Actual_Price__c/fields/Pricing_Effective_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Effective_End_Date__c</fullName>
    <description>The date until which the pricing remains valid, including any applied discounts.</description>
    <label>Pricing Effective End Date</label>
    <type>Date</type>
</CustomField>