force-app/main/default/objects/Actual_Price__c/fields/Pricing_Effective_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Effective_Start_Date__c</fullName>
    <description>The date from which the pricing becomes applicable, including any applied discounts.</description>
    <label>Pricing Effective Start Date</label>
    <type>Date</type>
</CustomField>