force-app/main/default/objects/Actual_Price__c/fields/Procedure__c.field-meta.xml
<CustomField>
    <fullName>Procedure__c</fullName>
    <description>This field is used to associate the procedure codes with contracted price.</description>
    <label>Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Procedure__c.Account__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>Procedure__c.RecordType.DeveloperName</field>
            <operation>notEqual</operation>
            <value>Patient_Procedure</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Procedure__c</referenceTo>
    <relationshipLabel>Actual Price</relationshipLabel>
    <relationshipName>Actual_Price</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>