force-app/main/default/objects/Actual_Price__c/validationRules/Discount_Amount_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_Amount_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Discount_Amount__c  &lt; 0 ||  Discount_Amount__c   &gt;  List_Price__c</errorConditionFormula>
    <errorDisplayField>Discount_Amount__c</errorDisplayField>
    <errorMessage>Discount amount should not be less than zero and should not be greater than list price</errorMessage>
</ValidationRule>