force-app/main/default/objects/Actual_Price__c/validationRules/Negative_percentage_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Negative_percentage_validation</fullName>
    <active>true</active>
    <errorConditionFormula>Discount_Percentage__c  &lt; 0.00 ||  Discount_Percentage__c  &gt; 1.00</errorConditionFormula>
    <errorDisplayField>Discount_Percentage__c</errorDisplayField>
    <errorMessage>Discount percentage should be in between 0 and 100</errorMessage>
</ValidationRule>