force-app/main/default/objects/Actual_Price__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Procedure__c</columns>
    <columns>Provider__c</columns>
    <columns>List_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>